--- a/examples/binarynet_cifar10.ipynb
+++ b/examples/binarynet_cifar10.ipynb
@@ -5,7 +5,7 @@
       "source": [
         "# Binarynet on CIFAR10\n",
         "\n",
-        "In this example we demonstrate how to use xquant to build binarynet for CIFAR10 to achieve a validation accuracy around 83% on laptop hardware.\n",
+        "In this example we demonstrate how to use Larq to build binarynet for CIFAR10 to achieve a validation accuracy around 83% on laptop hardware.\n",
         "On a Nvidia GTX1050ti MaxQ it takes approximately 200 minutes to train. Compared to the original papers, [BinaryConnect: Training Deep Neural Networks with binary weights during propagations](https://arxiv.org/abs/1511.00363), and [Binarized Neural Networks: Training Deep Neural Networks with Weights and Activations Constrained to +1 or -1](http://arxiv.org/abs/1602.02830), we do not impliment learning rate scaling, or image whitening."
       ],
       "metadata": {}
@@ -15,7 +15,7 @@
       "source": [
         "## Import Modules\n",
         "\n",
-        "First we import the modules. We use tensorflow, keras and xquant."
+        "First we import the modules. We use tensorflow, Keras and Larq."
       ],
       "metadata": {}
     },
@@ -23,7 +23,7 @@
       "cell_type": "code",
       "source": [
         "import tensorflow as tf\n",
-        "import xquant as xq\n",
+        "import larq as lq\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt"
       ],
@@ -77,7 +77,7 @@
       "source": [
         "model = tf.keras.models.Sequential(\n",
         "    [\n",
-        "        xq.layers.QuantConv2D(\n",
+        "        lq.layers.QuantConv2D(\n",
         "            128,\n",
         "            3,\n",
         "            kernel_quantizer=\"ste_sign\",\n",
@@ -87,7 +87,7 @@
         "        ),\n",
         "        tf.keras.layers.BatchNormalization(momentum=0.999, scale=False),\n",
         "        tf.keras.layers.Activation(\"hard_tanh\"),\n",
-        "        xq.layers.QuantConv2D(\n",
+        "        lq.layers.QuantConv2D(\n",
         "            128,\n",
         "            3,\n",
         "            kernel_quantizer=\"ste_sign\",\n",
@@ -99,7 +99,7 @@
         "        tf.keras.layers.MaxPool2D(pool_size=(2, 2), strides=(2, 2)),\n",
         "        tf.keras.layers.BatchNormalization(momentum=0.999, scale=False),\n",
         "        tf.keras.layers.Activation(\"hard_tanh\"),\n",
-        "        xq.layers.QuantConv2D(\n",
+        "        lq.layers.QuantConv2D(\n",
         "            256,\n",
         "            3,\n",
         "            kernel_quantizer=\"ste_sign\",\n",
@@ -110,7 +110,7 @@
         "        ),\n",
         "        tf.keras.layers.BatchNormalization(momentum=0.999, scale=False),\n",
         "        tf.keras.layers.Activation(\"hard_tanh\"),\n",
-        "        xq.layers.QuantConv2D(\n",
+        "        lq.layers.QuantConv2D(\n",
         "            256,\n",
         "            3,\n",
         "            kernel_quantizer=\"ste_sign\",\n",
@@ -122,7 +122,7 @@
         "        tf.keras.layers.MaxPool2D(pool_size=(2, 2), strides=(2, 2)),\n",
         "        tf.keras.layers.BatchNormalization(momentum=0.999, scale=False),\n",
         "        tf.keras.layers.Activation(\"hard_tanh\"),\n",
-        "        xq.layers.QuantConv2D(\n",
+        "        lq.layers.QuantConv2D(\n",
         "            512,\n",
         "            3,\n",
         "            kernel_quantizer=\"ste_sign\",\n",
@@ -133,7 +133,7 @@
         "        ),\n",
         "        tf.keras.layers.BatchNormalization(momentum=0.999, scale=False),\n",
         "        tf.keras.layers.Activation(\"hard_tanh\"),\n",
-        "        xq.layers.QuantConv2D(\n",
+        "        lq.layers.QuantConv2D(\n",
         "            512,\n",
         "            3,\n",
         "            kernel_quantizer=\"ste_sign\",\n",
@@ -146,7 +146,7 @@
         "        tf.keras.layers.BatchNormalization(momentum=0.999, scale=False),\n",
         "        tf.keras.layers.Flatten(),\n",
         "        tf.keras.layers.Activation(\"hard_tanh\"),\n",
-        "        xq.layers.QuantDense(\n",
+        "        lq.layers.QuantDense(\n",
         "            1024,\n",
         "            kernel_quantizer=\"ste_sign\",\n",
         "            input_quantizer=\"ste_sign\",\n",
@@ -155,7 +155,7 @@
         "        ),\n",
         "        tf.keras.layers.BatchNormalization(momentum=0.999, scale=False),\n",
         "        tf.keras.layers.Activation(\"hard_tanh\"),\n",
-        "        xq.layers.QuantDense(\n",
+        "        lq.layers.QuantDense(\n",
         "            1024,\n",
         "            kernel_quantizer=\"ste_sign\",\n",
         "            input_quantizer=\"ste_sign\",\n",
@@ -164,7 +164,7 @@
         "        ),\n",
         "        tf.keras.layers.BatchNormalization(momentum=0.999, scale=False),\n",
         "        tf.keras.layers.Activation(\"hard_tanh\"),\n",
-        "        xq.layers.QuantDense(\n",
+        "        lq.layers.QuantDense(\n",
         "            10,\n",
         "            kernel_quantizer=\"ste_sign\",\n",
         "            input_quantizer=\"ste_sign\",\n",
