--- a/examples/mnist.ipynb
+++ b/examples/mnist.ipynb
@@ -13,7 +13,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "This tutorial demonstrates training a simple Binarized Convolutional Neural Network to classify MNIST digits. This simple network will achieve over 98% accuracy on the MNIST test set. Because this tutorial uses XQuant and the [Keras Sequential API](https://www.tensorflow.org/guide/keras), creating and training our model will take just a few lines of code."
+        "This tutorial demonstrates training a simple Binarized Convolutional Neural Network to classify MNIST digits. This simple network will achieve over 98% accuracy on the MNIST test set. Because this tutorial uses Larq and the [Keras Sequential API](https://www.tensorflow.org/guide/keras), creating and training our model will take just a few lines of code."
       ],
       "metadata": {
         "colab_type": "text",
@@ -23,7 +23,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Import TensorFlow and XQuant"
+        "### Import TensorFlow and Larq"
       ],
       "metadata": {
         "colab_type": "text",
@@ -34,7 +34,7 @@
       "cell_type": "code",
       "source": [
         "import tensorflow as tf\n",
-        "import xquant as xq"
+        "import larq as lq"
       ],
       "outputs": [],
       "execution_count": 1,
@@ -98,7 +98,7 @@
         "\\end{cases}\n",
         "$$\n",
         "\n",
-        "In XQuant this can be done by using `input_quantizer=\"ste_sign\"` and `kernel_quantizer=\"ste_sign\"`.\n",
+        "In larq this can be done by using `input_quantizer=\"ste_sign\"` and `kernel_quantizer=\"ste_sign\"`.\n",
         "Additionally the latent full precision weights are clipped to be between -1 and 1 using `kernel_constraint=\"weight_clip\"`."
       ],
       "metadata": {
@@ -113,21 +113,21 @@
         "\n",
         "model = tf.keras.models.Sequential()\n",
         "\n",
-        "model.add(xq.layers.QuantConv2D(32, (3, 3), kernel_quantizer=\"ste_sign\", kernel_constraint=\"weight_clip\", use_bias=False, input_shape=(28, 28, 1)))\n",
+        "model.add(lq.layers.QuantConv2D(32, (3, 3), kernel_quantizer=\"ste_sign\", kernel_constraint=\"weight_clip\", use_bias=False, input_shape=(28, 28, 1)))\n",
         "model.add(tf.keras.layers.MaxPooling2D((2, 2)))\n",
         "model.add(tf.keras.layers.BatchNormalization(scale=False))\n",
         "\n",
-        "model.add(xq.layers.QuantConv2D(64, (3, 3), use_bias=False, **kwargs))\n",
+        "model.add(lq.layers.QuantConv2D(64, (3, 3), use_bias=False, **kwargs))\n",
         "model.add(tf.keras.layers.MaxPooling2D((2, 2)))\n",
         "model.add(tf.keras.layers.BatchNormalization(scale=False))\n",
         "\n",
-        "model.add(xq.layers.QuantConv2D(64, (3, 3), use_bias=False, **kwargs))\n",
+        "model.add(lq.layers.QuantConv2D(64, (3, 3), use_bias=False, **kwargs))\n",
         "model.add(tf.keras.layers.BatchNormalization(scale=False))\n",
         "model.add(tf.keras.layers.Flatten())\n",
         "\n",
-        "model.add(xq.layers.QuantDense(64, use_bias=False, **kwargs))\n",
+        "model.add(lq.layers.QuantDense(64, use_bias=False, **kwargs))\n",
         "model.add(tf.keras.layers.BatchNormalization(scale=False))\n",
-        "model.add(xq.layers.QuantDense(10, use_bias=False, **kwargs))\n",
+        "model.add(lq.layers.QuantDense(10, use_bias=False, **kwargs))\n",
         "model.add(tf.keras.layers.BatchNormalization(scale=False))\n",
         "model.add(tf.keras.layers.Activation(\"softmax\"))"
       ],
