Add larq.models.summary documentation

--- a/examples/binarynet_cifar10.ipynb
+++ b/examples/binarynet_cifar10.ipynb
@@ -190,82 +190,51 @@
     {
       "cell_type": "code",
       "source": [
-        "model.summary()"
+        "lq.models.summary(model)"
       ],
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "_________________________________________________________________\n",
-            "Layer (type)                 Output Shape              Param #   \n",
-            "=================================================================\n",
-            "quant_conv2d (QuantConv2D)   (None, 30, 30, 128)       3456      \n",
-            "_________________________________________________________________\n",
-            "batch_normalization (BatchNo (None, 30, 30, 128)       384       \n",
-            "_________________________________________________________________\n",
-            "activation (Activation)      (None, 30, 30, 128)       0         \n",
-            "_________________________________________________________________\n",
-            "quant_conv2d_1 (QuantConv2D) (None, 30, 30, 128)       147456    \n",
-            "_________________________________________________________________\n",
-            "max_pooling2d (MaxPooling2D) (None, 15, 15, 128)       0         \n",
-            "_________________________________________________________________\n",
-            "batch_normalization_1 (Batch (None, 15, 15, 128)       384       \n",
-            "_________________________________________________________________\n",
-            "activation_1 (Activation)    (None, 15, 15, 128)       0         \n",
-            "_________________________________________________________________\n",
-            "quant_conv2d_2 (QuantConv2D) (None, 15, 15, 256)       294912    \n",
-            "_________________________________________________________________\n",
-            "batch_normalization_2 (Batch (None, 15, 15, 256)       768       \n",
-            "_________________________________________________________________\n",
-            "activation_2 (Activation)    (None, 15, 15, 256)       0         \n",
-            "_________________________________________________________________\n",
-            "quant_conv2d_3 (QuantConv2D) (None, 15, 15, 256)       589824    \n",
-            "_________________________________________________________________\n",
-            "max_pooling2d_1 (MaxPooling2 (None, 7, 7, 256)         0         \n",
-            "_________________________________________________________________\n",
-            "batch_normalization_3 (Batch (None, 7, 7, 256)         768       \n",
-            "_________________________________________________________________\n",
-            "activation_3 (Activation)    (None, 7, 7, 256)         0         \n",
-            "_________________________________________________________________\n",
-            "quant_conv2d_4 (QuantConv2D) (None, 7, 7, 512)         1179648   \n",
-            "_________________________________________________________________\n",
-            "batch_normalization_4 (Batch (None, 7, 7, 512)         1536      \n",
-            "_________________________________________________________________\n",
-            "activation_4 (Activation)    (None, 7, 7, 512)         0         \n",
-            "_________________________________________________________________\n",
-            "quant_conv2d_5 (QuantConv2D) (None, 7, 7, 512)         2359296   \n",
-            "_________________________________________________________________\n",
-            "max_pooling2d_2 (MaxPooling2 (None, 3, 3, 512)         0         \n",
-            "_________________________________________________________________\n",
-            "batch_normalization_5 (Batch (None, 3, 3, 512)         1536      \n",
-            "_________________________________________________________________\n",
-            "flatten (Flatten)            (None, 4608)              0         \n",
-            "_________________________________________________________________\n",
-            "activation_5 (Activation)    (None, 4608)              0         \n",
-            "_________________________________________________________________\n",
-            "quant_dense (QuantDense)     (None, 1024)              4718592   \n",
-            "_________________________________________________________________\n",
-            "batch_normalization_6 (Batch (None, 1024)              3072      \n",
-            "_________________________________________________________________\n",
-            "activation_6 (Activation)    (None, 1024)              0         \n",
-            "_________________________________________________________________\n",
-            "quant_dense_1 (QuantDense)   (None, 1024)              1048576   \n",
-            "_________________________________________________________________\n",
-            "batch_normalization_7 (Batch (None, 1024)              3072      \n",
-            "_________________________________________________________________\n",
-            "activation_7 (Activation)    (None, 1024)              0         \n",
-            "_________________________________________________________________\n",
-            "quant_dense_2 (QuantDense)   (None, 10)                10240     \n",
-            "_________________________________________________________________\n",
-            "batch_normalization_8 (Batch (None, 10)                30        \n",
-            "_________________________________________________________________\n",
-            "activation_8 (Activation)    (None, 10)                0         \n",
-            "=================================================================\n",
-            "Total params: 10,363,550\n",
-            "Trainable params: 10,355,850\n",
-            "Non-trainable params: 7,700\n",
-            "_________________________________________________________________\n"
+            "Layer                     Outputs              # 1-bit    # 32-bit\n",
+            "------------------------  -----------------  ---------  ----------\n",
+            "quant_conv2d              (-1, 30, 30, 128)       3456           0\n",
+            "batch_normalization_v1    (-1, 30, 30, 128)          0         384\n",
+            "activation                (-1, 30, 30, 128)          0           0\n",
+            "quant_conv2d_1            (-1, 30, 30, 128)     147456           0\n",
+            "max_pooling2d             (-1, 15, 15, 128)          0           0\n",
+            "batch_normalization_v1_1  (-1, 15, 15, 128)          0         384\n",
+            "activation_1              (-1, 15, 15, 128)          0           0\n",
+            "quant_conv2d_2            (-1, 15, 15, 256)     294912           0\n",
+            "batch_normalization_v1_2  (-1, 15, 15, 256)          0         768\n",
+            "activation_2              (-1, 15, 15, 256)          0           0\n",
+            "quant_conv2d_3            (-1, 15, 15, 256)     589824           0\n",
+            "max_pooling2d_1           (-1, 7, 7, 256)            0           0\n",
+            "batch_normalization_v1_3  (-1, 7, 7, 256)            0         768\n",
+            "activation_3              (-1, 7, 7, 256)            0           0\n",
+            "quant_conv2d_4            (-1, 7, 7, 512)      1179648           0\n",
+            "batch_normalization_v1_4  (-1, 7, 7, 512)            0        1536\n",
+            "activation_4              (-1, 7, 7, 512)            0           0\n",
+            "quant_conv2d_5            (-1, 7, 7, 512)      2359296           0\n",
+            "max_pooling2d_2           (-1, 3, 3, 512)            0           0\n",
+            "batch_normalization_v1_5  (-1, 3, 3, 512)            0        1536\n",
+            "flatten                   (-1, 4608)                 0           0\n",
+            "activation_5              (-1, 4608)                 0           0\n",
+            "quant_dense               (-1, 1024)           4718592           0\n",
+            "batch_normalization_v1_6  (-1, 1024)                 0        3072\n",
+            "activation_6              (-1, 1024)                 0           0\n",
+            "quant_dense_1             (-1, 1024)           1048576           0\n",
+            "batch_normalization_v1_7  (-1, 1024)                 0        3072\n",
+            "activation_7              (-1, 1024)                 0           0\n",
+            "quant_dense_2             (-1, 10)               10240           0\n",
+            "batch_normalization_v1_8  (-1, 10)                   0          30\n",
+            "activation_8              (-1, 10)                   0           0\n",
+            "Total                                         10352000       11550\n",
+            "\n",
+            "Total params: 10363550\n",
+            "Trainable params: 10355850\n",
+            "Non-trainable params: 7700\n"
           ]
         }
       ],
