--- a/examples/mnist.ipynb
+++ b/examples/mnist.ipynb
@@ -132,7 +132,7 @@
         "model.add(tf.keras.layers.Activation(\"softmax\"))"
       ],
       "outputs": [],
-      "execution_count": 20,
+      "execution_count": 4,
       "metadata": {
         "colab_type": "code",
         "id": "L9YmGQBQPrdn",
@@ -154,52 +154,38 @@
     {
       "cell_type": "code",
       "source": [
-        "model.summary()"
+        "lq.models.summary(model)"
       ],
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "_________________________________________________________________\n",
-            "Layer (type)                 Output Shape              Param #   \n",
-            "=================================================================\n",
-            "quant_conv2d_18 (QuantConv2D (None, 26, 26, 32)        288       \n",
-            "_________________________________________________________________\n",
-            "max_pooling2d_12 (MaxPooling (None, 13, 13, 32)        0         \n",
-            "_________________________________________________________________\n",
-            "batch_normalization_v1_20 (B (None, 13, 13, 32)        96        \n",
-            "_________________________________________________________________\n",
-            "quant_conv2d_19 (QuantConv2D (None, 11, 11, 64)        18432     \n",
-            "_________________________________________________________________\n",
-            "max_pooling2d_13 (MaxPooling (None, 5, 5, 64)          0         \n",
-            "_________________________________________________________________\n",
-            "batch_normalization_v1_21 (B (None, 5, 5, 64)          192       \n",
-            "_________________________________________________________________\n",
-            "quant_conv2d_20 (QuantConv2D (None, 3, 3, 64)          36864     \n",
-            "_________________________________________________________________\n",
-            "batch_normalization_v1_22 (B (None, 3, 3, 64)          192       \n",
-            "_________________________________________________________________\n",
-            "flatten_6 (Flatten)          (None, 576)               0         \n",
-            "_________________________________________________________________\n",
-            "quant_dense_6 (QuantDense)   (None, 64)                36864     \n",
-            "_________________________________________________________________\n",
-            "batch_normalization_v1_23 (B (None, 64)                192       \n",
-            "_________________________________________________________________\n",
-            "quant_dense_7 (QuantDense)   (None, 10)                640       \n",
-            "_________________________________________________________________\n",
-            "batch_normalization_v1_24 (B (None, 10)                30        \n",
-            "_________________________________________________________________\n",
-            "activation_6 (Activation)    (None, 10)                0         \n",
-            "=================================================================\n",
-            "Total params: 93,790\n",
-            "Trainable params: 93,322\n",
-            "Non-trainable params: 468\n",
-            "_________________________________________________________________\n"
+            "Layer                     Outputs             # 1-bit    # 32-bit\n",
+            "------------------------  ----------------  ---------  ----------\n",
+            "quant_conv2d_3            (-1, 26, 26, 32)        288           0\n",
+            "max_pooling2d_2           (-1, 13, 13, 32)          0           0\n",
+            "batch_normalization_v1_5  (-1, 13, 13, 32)          0          96\n",
+            "quant_conv2d_4            (-1, 11, 11, 64)      18432           0\n",
+            "max_pooling2d_3           (-1, 5, 5, 64)            0           0\n",
+            "batch_normalization_v1_6  (-1, 5, 5, 64)            0         192\n",
+            "quant_conv2d_5            (-1, 3, 3, 64)        36864           0\n",
+            "batch_normalization_v1_7  (-1, 3, 3, 64)            0         192\n",
+            "flatten_1                 (-1, 576)                 0           0\n",
+            "quant_dense_2             (-1, 64)              36864           0\n",
+            "batch_normalization_v1_8  (-1, 64)                  0         192\n",
+            "quant_dense_3             (-1, 10)                640           0\n",
+            "batch_normalization_v1_9  (-1, 10)                  0          30\n",
+            "activation_1              (-1, 10)                  0           0\n",
+            "Total                                           93088         702\n",
+            "\n",
+            "Total params: 93790\n",
+            "Trainable params: 93322\n",
+            "Non-trainable params: 468\n"
           ]
         }
       ],
-      "execution_count": 21,
+      "execution_count": 8,
       "metadata": {
         "colab_type": "code",
         "id": "8-C4XBg4UTJy",
