Add mybinder and more badges
Closes #24

--- a/examples/binarynet_cifar10.ipynb
+++ b/examples/binarynet_cifar10.ipynb
@@ -5,6 +5,8 @@
       "source": [
         "# Binarynet on CIFAR10\n",
         "\n",
+        "## Run this notebok [![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/plumerai/larq/master?filepath=examples%2Fbinarynet_cifar10.ipynb)\n",
+        "\n",
         "In this example we demonstrate how to use Larq to build binarynet for CIFAR10 to achieve a validation accuracy around 83% on laptop hardware.\n",
         "On a Nvidia GTX1050ti MaxQ it takes approximately 200 minutes to train. Compared to the original papers, [BinaryConnect: Training Deep Neural Networks with binary weights during propagations](https://arxiv.org/abs/1511.00363), and [Binarized Neural Networks: Training Deep Neural Networks with Weights and Activations Constrained to +1 or -1](http://arxiv.org/abs/1602.02830), we do not impliment learning rate scaling, or image whitening."
       ],
