--- a/examples/mnist.ipynb
+++ b/examples/mnist.ipynb
@@ -3,16 +3,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Binarized Convolutional Neural Networks"
-      ],
-      "metadata": {
-        "id": "DSPCom-KmApV",
-        "colab_type": "text"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
+        "# Binarized Convolutional Neural Networks\n",
+        "\n",
+        "## Run this notebok [![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/plumerai/larq/master?filepath=examples%2Fmnist.ipynb)\n",
+        "\n",
         "This tutorial demonstrates training a simple Binarized Convolutional Neural Network to classify MNIST digits. This simple network will achieve over 98% accuracy on the MNIST test set. Because this tutorial uses Larq and the [Keras Sequential API](https://www.tensorflow.org/guide/keras), creating and training our model will take just a few lines of code."
       ],
       "metadata": {
