--- a/examples/binarynet_advanced_cifar10.ipynb
+++ b/examples/binarynet_advanced_cifar10.ipynb
@@ -23,14 +23,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "print(os.getcwd())\n",
-    "os.chdir('/home/james/Work/advanced_larq/larq')\n",
-    "\n",
     "import tensorflow as tf\n",
     "import larq as lq\n",
     "import numpy as np\n",
@@ -48,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,9 +229,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Layer                  Outputs              # 1-bit    # 32-bit\n",
+      "---------------------  -----------------  ---------  ----------\n",
+      "quant_conv2d           (-1, 30, 30, 128)       3456           0\n",
+      "batch_normalization    (-1, 30, 30, 128)          0         384\n",
+      "activation             (-1, 30, 30, 128)          0           0\n",
+      "quant_conv2d_1         (-1, 30, 30, 128)     147456           0\n",
+      "max_pooling2d          (-1, 15, 15, 128)          0           0\n",
+      "batch_normalization_1  (-1, 15, 15, 128)          0         384\n",
+      "activation_1           (-1, 15, 15, 128)          0           0\n",
+      "quant_conv2d_2         (-1, 15, 15, 256)     294912           0\n",
+      "batch_normalization_2  (-1, 15, 15, 256)          0         768\n",
+      "activation_2           (-1, 15, 15, 256)          0           0\n",
+      "quant_conv2d_3         (-1, 15, 15, 256)     589824           0\n",
+      "max_pooling2d_1        (-1, 7, 7, 256)            0           0\n",
+      "batch_normalization_3  (-1, 7, 7, 256)            0         768\n",
+      "activation_3           (-1, 7, 7, 256)            0           0\n",
+      "quant_conv2d_4         (-1, 7, 7, 512)      1179648           0\n",
+      "batch_normalization_4  (-1, 7, 7, 512)            0        1536\n",
+      "activation_4           (-1, 7, 7, 512)            0           0\n",
+      "quant_conv2d_5         (-1, 7, 7, 512)      2359296           0\n",
+      "max_pooling2d_2        (-1, 3, 3, 512)            0           0\n",
+      "batch_normalization_5  (-1, 3, 3, 512)            0        1536\n",
+      "flatten                (-1, 4608)                 0           0\n",
+      "activation_5           (-1, 4608)                 0           0\n",
+      "quant_dense            (-1, 1024)           4718592           0\n",
+      "batch_normalization_6  (-1, 1024)                 0        3072\n",
+      "activation_6           (-1, 1024)                 0           0\n",
+      "quant_dense_1          (-1, 1024)           1048576           0\n",
+      "batch_normalization_7  (-1, 1024)                 0        3072\n",
+      "activation_7           (-1, 1024)                 0           0\n",
+      "quant_dense_2          (-1, 10)               10240           0\n",
+      "batch_normalization_8  (-1, 10)                   0          30\n",
+      "activation_8           (-1, 10)                   0           0\n",
+      "Total                                      10352000       11550\n",
+      "\n",
+      "Total params: 10363550\n",
+      "Trainable params: 10355850\n",
+      "Non-trainable params: 7700\n"
+     ]
+    }
+   ],
    "source": [
     "lq.models.summary(model)"
    ]
@@ -251,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
