minor text changes

--- a/examples/binarynet_advanced_cifar10.ipynb
+++ b/examples/binarynet_advanced_cifar10.ipynb
@@ -6,10 +6,10 @@
    "source": [
     "# Binarynet on CIFAR10 (Advanced)\n",
     "\n",
-    "## Run this notebok [![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/plumerai/larq/master?filepath=examples%2Fbinarynet_advanced_cifar10.ipynb)\n",
+    "## Run this notebook [![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/plumerai/larq/master?filepath=examples%2Fbinarynet_advanced_cifar10.ipynb)\n",
     "\n",
-    "In this example we demonstrate how to use Larq to build binarynet for CIFAR10 to achieve a validation accuracy around 90% using a heavy lifting GPU e.g V100.\n",
-    "On a V100 it takes approximately 250 minutes to train. Compared to the original papers, [BinaryConnect: Training Deep Neural Networks with binary weights during propagations](https://arxiv.org/abs/1511.00363), and [Binarized Neural Networks: Training Deep Neural Networks with Weights and Activations Constrained to +1 or -1](http://arxiv.org/abs/1602.02830), we do not impliment image whitening, however we use image augmentation, and a stepped learning rate schedular."
+    "In this example we demonstrate how to use Larq to build BinaryNet for CIFAR10 to achieve a validation accuracy of around 90% using a heavy lifting GPU like a V100.\n",
+    "On a V100 it takes approximately 250 minutes to train. Compared to the original papers, [BinaryConnect: Training Deep Neural Networks with binary weights during propagations](https://arxiv.org/abs/1511.00363), and [Binarized Neural Networks: Training Deep Neural Networks with Weights and Activations Constrained to +1 or -1](http://arxiv.org/abs/1602.02830), we do not implement image whitening, but we use image augmentation, and a stepped learning rate scheduler."
    ]
   },
   {
@@ -18,7 +18,7 @@
    "source": [
     "## Import Modules\n",
     "\n",
-    "First we import the modules. We use tensorflow, Keras and Larq."
+    "Let's first get our imports out of the way:"
    ]
   },
   {
@@ -39,7 +39,7 @@
    "source": [
     "## Import CIFAR10 Dataset\n",
     "\n",
-    "We download the CIFAR10 dataset."
+    "Here we download the CIFAR10 dataset:"
    ]
   },
   {
@@ -55,12 +55,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we define our image augmentation technqiues, and create the dataset"
+    "Next, we define our image augmentation technqiues, and create the dataset:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
    "source": [
     "## Build Binarynet\n",
     "\n",
-    "Here we build the binarynet model layer by layer using a keras sequential model"
+    "Here we build the binarynet model layer by layer using a keras sequential model:"
    ]
   },
   {
@@ -224,7 +224,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "One can output a summary of the model."
+    "Larq allows you to print a summary of the model that includes bit-precision information:"
    ]
   },
   {
@@ -287,7 +287,7 @@
    "source": [
     "## Model Training\n",
     "\n",
-    "Compile and train the model"
+    "We compile and train the model as you are used to in Keras:"
    ]
   },
   {
