--- a/examples/binarynet_advanced_cifar10.ipynb
+++ b/examples/binarynet_advanced_cifar10.ipynb
@@ -29,8 +29,7 @@
    "source": [
     "import tensorflow as tf\n",
     "import larq as lq\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import numpy as np"
    ]
   },
   {
@@ -129,7 +128,6 @@
     "            input_shape=(32, 32, 3),\n",
     "        ),\n",
     "        tf.keras.layers.BatchNormalization(momentum=0.999, scale=False),\n",
-    "        tf.keras.layers.Activation(\"hard_tanh\"),\n",
     "        lq.layers.QuantConv2D(\n",
     "            128,\n",
     "            3,\n",
@@ -141,7 +139,6 @@
     "        ),\n",
     "        tf.keras.layers.MaxPool2D(pool_size=(2, 2), strides=(2, 2)),\n",
     "        tf.keras.layers.BatchNormalization(momentum=0.999, scale=False),\n",
-    "        tf.keras.layers.Activation(\"hard_tanh\"),\n",
     "        lq.layers.QuantConv2D(\n",
     "            256,\n",
     "            3,\n",
@@ -152,7 +149,6 @@
     "            use_bias=False,\n",
     "        ),\n",
     "        tf.keras.layers.BatchNormalization(momentum=0.999, scale=False),\n",
-    "        tf.keras.layers.Activation(\"hard_tanh\"),\n",
     "        lq.layers.QuantConv2D(\n",
     "            256,\n",
     "            3,\n",
@@ -164,7 +160,6 @@
     "        ),\n",
     "        tf.keras.layers.MaxPool2D(pool_size=(2, 2), strides=(2, 2)),\n",
     "        tf.keras.layers.BatchNormalization(momentum=0.999, scale=False),\n",
-    "        tf.keras.layers.Activation(\"hard_tanh\"),\n",
     "        lq.layers.QuantConv2D(\n",
     "            512,\n",
     "            3,\n",
@@ -175,7 +170,6 @@
     "            use_bias=False,\n",
     "        ),\n",
     "        tf.keras.layers.BatchNormalization(momentum=0.999, scale=False),\n",
-    "        tf.keras.layers.Activation(\"hard_tanh\"),\n",
     "        lq.layers.QuantConv2D(\n",
     "            512,\n",
     "            3,\n",
@@ -188,7 +182,6 @@
     "        tf.keras.layers.MaxPool2D(pool_size=(2, 2), strides=(2, 2)),\n",
     "        tf.keras.layers.BatchNormalization(momentum=0.999, scale=False),\n",
     "        tf.keras.layers.Flatten(),\n",
-    "        tf.keras.layers.Activation(\"hard_tanh\"),\n",
     "        lq.layers.QuantDense(\n",
     "            1024,\n",
     "            kernel_quantizer=\"ste_sign\",\n",
@@ -197,7 +190,6 @@
     "            use_bias=False,\n",
     "        ),\n",
     "        tf.keras.layers.BatchNormalization(momentum=0.999, scale=False),\n",
-    "        tf.keras.layers.Activation(\"hard_tanh\"),\n",
     "        lq.layers.QuantDense(\n",
     "            1024,\n",
     "            kernel_quantizer=\"ste_sign\",\n",
@@ -206,7 +198,6 @@
     "            use_bias=False,\n",
     "        ),\n",
     "        tf.keras.layers.BatchNormalization(momentum=0.999, scale=False),\n",
-    "        tf.keras.layers.Activation(\"hard_tanh\"),\n",
     "        lq.layers.QuantDense(\n",
     "            10,\n",
     "            kernel_quantizer=\"ste_sign\",\n",
