Rework Readme and wording in the examples

--- a/examples/mnist.ipynb
+++ b/examples/mnist.ipynb
@@ -3,25 +3,15 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Binarized Convolutional Neural Networks\n",
+        "# Introduction to BNNs with Larq\n",
         "\n",
-        "## Run this notebok [![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/plumerai/larq/master?filepath=examples%2Fmnist.ipynb)\n",
+        "**Run this notebook here: [![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/plumerai/larq/master?filepath=examples%2Fmnist.ipynb)**\n",
         "\n",
-        "This tutorial demonstrates training a simple Binarized Convolutional Neural Network to classify MNIST digits. This simple network will achieve over 98% accuracy on the MNIST test set. Because this tutorial uses Larq and the [Keras Sequential API](https://www.tensorflow.org/guide/keras), creating and training our model will take just a few lines of code."
+        "This tutorial demonstrates how to train a simple binarized Convolutional Neural Network (CNN) to classify MNIST digits. This simple network will achieve approximately 98% accuracy on the MNIST test set. This tutorial uses Larq and the [Keras Sequential API](https://www.tensorflow.org/guide/keras), so creating and training our model will require only a few lines of code."
       ],
       "metadata": {
         "colab_type": "text",
         "id": "qLGkt5qiyz4E"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### Import TensorFlow and Larq"
-      ],
-      "metadata": {
-        "colab_type": "text",
-        "id": "m7KBpffWzlxH"
       }
     },
     {
@@ -72,19 +62,19 @@
       "source": [
         "### Create the model\n",
         "\n",
-        "This will create a simple binarized convolutional network.\n",
+        "The following will create a simple binarized CNN.\n",
         "\n",
-        "In the forward pass the quantization function\n",
+        "The quantization function\n",
         "$$\n",
         "q(x) = \\begin{cases}\n",
         "    -1 & x < 0 \\\\\\\n",
         "    1 & x \\geq 0\n",
         "\\end{cases}\n",
         "$$\n",
-        "is used to binarize the activations and the latent full precision weights. The gradient of this function is zero almost everywhere which prevents the model from learning.\n",
+        "is used in the forward pass to binarize the activations and the latent full precision weights. The gradient of this function is zero almost everywhere which prevents the model from learning.\n",
         "\n",
         "To be able to train the model the gradient is instead estimated using the Straight-Through Estimator (STE)\n",
-        "(essentially the binarization is replaced by a clipped identity on the backward pass):\n",
+        "(the binarization is essentially replaced by a clipped identity on the backward pass):\n",
         "$$\n",
         "\\frac{\\partial q(x)}{\\partial x} = \\begin{cases}\n",
         "    1 & \\left|x\\right| \\leq 1 \\\\\\\n",
@@ -92,8 +82,8 @@
         "\\end{cases}\n",
         "$$\n",
         "\n",
-        "In larq this can be done by using `input_quantizer=\"ste_sign\"` and `kernel_quantizer=\"ste_sign\"`.\n",
-        "Additionally the latent full precision weights are clipped to be between -1 and 1 using `kernel_constraint=\"weight_clip\"`."
+        "In Larq this can be done by using `input_quantizer=\"ste_sign\"` and `kernel_quantizer=\"ste_sign\"`.\n",
+        "Additionally, the latent full precision weights are clipped to -1 and 1 using `kernel_constraint=\"weight_clip\"`."
       ],
       "metadata": {
         "colab_type": "text",
@@ -103,11 +93,19 @@
     {
       "cell_type": "code",
       "source": [
-        "kwargs = dict(input_quantizer=\"ste_sign\", kernel_quantizer=\"ste_sign\", kernel_constraint=\"weight_clip\")\n",
+        "# All quantized layers except the first will use the same options\n",
+        "kwargs = dict(input_quantizer=\"ste_sign\",\n",
+        "              kernel_quantizer=\"ste_sign\",\n",
+        "              kernel_constraint=\"weight_clip\")\n",
         "\n",
         "model = tf.keras.models.Sequential()\n",
         "\n",
-        "model.add(lq.layers.QuantConv2D(32, (3, 3), kernel_quantizer=\"ste_sign\", kernel_constraint=\"weight_clip\", use_bias=False, input_shape=(28, 28, 1)))\n",
+        "# In the first layer we only quantize the weights and not the input\n",
+        "model.add(lq.layers.QuantConv2D(32, (3, 3),\n",
+        "                                kernel_quantizer=\"ste_sign\",\n",
+        "                                kernel_constraint=\"weight_clip\",\n",
+        "                                use_bias=False,\n",
+        "                                input_shape=(28, 28, 1)))\n",
         "model.add(tf.keras.layers.MaxPooling2D((2, 2)))\n",
         "model.add(tf.keras.layers.BatchNormalization(scale=False))\n",
         "\n",
@@ -136,9 +134,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        " Here's the complete architecture of our model.\n",
-        " \n",
-        " Almost all parameter of the network a binarized (either -1 or 1). This will make the network extremly fast when deployed on a embedded device that supports binarized neural networks."
+        "Almost all parameters in the network are binarized, so either -1 or 1. This makes the network extremely fast if it would be deployed on custom BNN hardware.\n",
+        "\n",
+        " Here is the complete architecture of our model:"
       ],
       "metadata": {
         "colab_type": "text",
