--- a/docs/examples/binarynet_advanced_cifar10.ipynb
+++ b/docs/examples/binarynet_advanced_cifar10.ipynb
@@ -96,7 +96,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Build Binarynet\n",
+        "## Build BinaryNet\n",
         "\n",
         "Here we build the binarynet model layer by layer using a keras sequential model:"
       ],
