--- a/examples/mnist_ternary.ipynb
+++ b/examples/mnist_ternary.ipynb
@@ -120,15 +120,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "L9YmGQBQPrdn"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "ste_tern() missing 1 required positional argument: 'x'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-ed1a46f69240>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mkwargs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_quantizer\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkernel_quantizer\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlq\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mquantizers\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mste_tern\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkernel_constraint\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"weight_clip\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodels\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSequential\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlq\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlayers\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mQuantConv2D\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m32\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkernel_quantizer\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"ste_tern\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkernel_constraint\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"weight_clip\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0muse_bias\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minput_shape\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m28\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m28\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: ste_tern() missing 1 required positional argument: 'x'"
+     ]
+    }
+   ],
    "source": [
-    "kwargs = dict(input_quantizer=None, kernel_quantizer=\"ste_tern\", kernel_constraint=\"weight_clip\")\n",
+    "kwargs = dict(input_quantizer=None, kernel_quantizer=lq.quantizers.ste_tern(), kernel_constraint=\"weight_clip\")\n",
     "\n",
     "model = tf.keras.models.Sequential()\n",
     "\n",
@@ -165,55 +177,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "8-C4XBg4UTJy"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "quant_conv2d (QuantConv2D)   (None, 26, 26, 32)        288       \n",
-      "_________________________________________________________________\n",
-      "max_pooling2d (MaxPooling2D) (None, 13, 13, 32)        0         \n",
-      "_________________________________________________________________\n",
-      "batch_normalization (BatchNo (None, 13, 13, 32)        96        \n",
-      "_________________________________________________________________\n",
-      "quant_conv2d_1 (QuantConv2D) (None, 11, 11, 64)        18432     \n",
-      "_________________________________________________________________\n",
-      "max_pooling2d_1 (MaxPooling2 (None, 5, 5, 64)          0         \n",
-      "_________________________________________________________________\n",
-      "batch_normalization_1 (Batch (None, 5, 5, 64)          192       \n",
-      "_________________________________________________________________\n",
-      "quant_conv2d_2 (QuantConv2D) (None, 3, 3, 64)          36864     \n",
-      "_________________________________________________________________\n",
-      "batch_normalization_2 (Batch (None, 3, 3, 64)          192       \n",
-      "_________________________________________________________________\n",
-      "flatten (Flatten)            (None, 576)               0         \n",
-      "_________________________________________________________________\n",
-      "quant_dense (QuantDense)     (None, 64)                36864     \n",
-      "_________________________________________________________________\n",
-      "batch_normalization_3 (Batch (None, 64)                192       \n",
-      "_________________________________________________________________\n",
-      "quant_dense_1 (QuantDense)   (None, 10)                640       \n",
-      "_________________________________________________________________\n",
-      "batch_normalization_4 (Batch (None, 10)                30        \n",
-      "_________________________________________________________________\n",
-      "activation (Activation)      (None, 10)                0         \n",
-      "=================================================================\n",
-      "Total params: 93,790\n",
-      "Trainable params: 93,322\n",
-      "Non-trainable params: 468\n",
-      "_________________________________________________________________\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model.summary()"
    ]
@@ -232,41 +202,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "MdDzI75PUXrG"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/10\n",
-      "60000/60000 [==============================] - 7s 116us/step - loss: 0.6032 - acc: 0.9434\n",
-      "Epoch 2/10\n",
-      "60000/60000 [==============================] - 5s 89us/step - loss: 0.5269 - acc: 0.9661\n",
-      "Epoch 3/10\n",
-      "60000/60000 [==============================] - 5s 89us/step - loss: 0.5126 - acc: 0.9702\n",
-      "Epoch 4/10\n",
-      "60000/60000 [==============================] - 5s 90us/step - loss: 0.5049 - acc: 0.9714\n",
-      "Epoch 5/10\n",
-      "60000/60000 [==============================] - 5s 89us/step - loss: 0.5004 - acc: 0.9732\n",
-      "Epoch 6/10\n",
-      "60000/60000 [==============================] - 5s 89us/step - loss: 0.4965 - acc: 0.9740\n",
-      "Epoch 7/10\n",
-      "60000/60000 [==============================] - 5s 89us/step - loss: 0.4948 - acc: 0.9750\n",
-      "Epoch 8/10\n",
-      "60000/60000 [==============================] - 5s 89us/step - loss: 0.4910 - acc: 0.9750\n",
-      "Epoch 9/10\n",
-      "60000/60000 [==============================] - 5s 89us/step - loss: 0.4897 - acc: 0.9755\n",
-      "Epoch 10/10\n",
-      "60000/60000 [==============================] - 5s 89us/step - loss: 0.4867 - acc: 0.9768\n",
-      "10000/10000 [==============================] - 0s 48us/step\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model.compile(optimizer='adam',\n",
     "              loss='sparse_categorical_crossentropy',\n",
@@ -289,21 +231,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "0LvwaKhtUdOo"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test accuracy 98.25 %\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f\"Test accuracy {test_acc * 100:.2f} %\")"
    ]
